test/corpus/status.txt
==================
Headers and status
==================
Head: main
Pull: origin/main
Help: g? open help

Unstaged (2)
M src/parser.c
R old.ts -> new.ts
@@ -1,2 +1,3 @@
 context
-before
+after
\ No newline at end of file

---

(document
  (head_header
    key: (header_key)
    target: (symbolic_ref))
  (ref_header
    key: (header_key)
    target: (symbolic_ref))
  (help_header
    key: (help_header_key)
    tag: (help_tag)
    text: (inline_text))
  (blank_line)
  (section
    (section_heading
      title: (section_title
        (section_title_word))
      count: (section_count))
    (file_entry
      status: (modifier)
      path: (inline_text))
    (file_entry
      status: (modifier)
      path: (inline_text))
    (hunk
      (hunk_header
        start: (hunk_delimiter)
        old_range: (range)
        new_range: (range)
        end: (hunk_delimiter))
      (diff_context
        text: (inline_text))
      (diff_delete
        text: (inline_text))
      (diff_add
        text: (inline_text))
      (diff_note
        text: (inline_text)))))
